logs/cvrfparse.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cvrfparse'...
Compiling './lib/python3.5/site-packages/cvrfparse/cvrfparse.py'...
***   File "./lib/python3.5/site-packages/cvrfparse/cvrfparse.py", line 287
    except Exception, value:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cvrfparse/sample-xml'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/common'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/common/1.1'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/cvrf'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/cvrf/1.1'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/dublincore'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/prod'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/prod/1.1'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/scap'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/vuln'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/vuln/1.1'...
Listing './lib/python3.5/site-packages/cvrfparse/schemata/w3.org'...
Listing './lib/python3.5/site-packages/cvrfparse-1.0.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
